# src/main/java/com/jaav/sys/miniencuesta/model/api/ProcessEntity.java
@@ -1,22 +1,0 @@
-package com.jaav.sys.miniencuesta.model.api;
-
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
-
-@Getter
-@Setter
-@NoArgsConstructor
-@AllArgsConstructor
-public class ProcessEntity {
-
-    private String proccesName;
-
-    private String status;
-
-    private Integer countOk;
-
-    private Integer countError;
-
-}
